--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <script src="./assets/bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
